--- a/raviteja11.html
+++ b/raviteja11.html
@@ -8,10 +8,10 @@
 <h1>10000 C{}DERS</h1>
 
 <ul>
-<li><a href="https://raviteja6671.github.io/python/raviteja12.html">Home</a></li>
-<li><a href="https://raviteja6671.github.io/python/raviteja13.html">Images</a></li>
-<li><a href="https://raviteja6671.github.io/python/raviteja14.html">Contact</a></li>
-<li><a href="https://raviteja6671.github.io/python/raviteja15.html">About us</a></li>
+<li><a href="./raviteja12.html">Home</a></li>
+<li><a href="./raviteja13.html">Images</a></li>
+<li><a href="./raviteja14.html">Contact</a></li>
+<li><a href="./raviteja15.html">About us</a></li>
 </ul>
 
 </center>
