--- a/raviteja13.html
+++ b/raviteja13.html
@@ -12,7 +12,7 @@
 <li><a href="https://media.licdn.com/dms/image/v2/D5622AQG7CvwRZQOk3A/feedshare-shrink_800/B56ZSI62tHHoAg-/0/1737463921100?e=2147483647&v=beta&t=42B64IRxlFVUf4vJdABINR6zfkjmtnjOCCG7mCXIcno">image3</a></li>
 <li><a href="https://cdn-images-1.medium.com/max/396/1*xdhm7cqz8DwDzQNXxhZXVA@2x.png">image4</a></li>
 </ul>
-<button><a href="./https://raviteja6671.github.io/ranu/raviteja11.html">back</a></button>
+<button><a href="./raviteja11.html">back</a></button>
 
 </center>
 
