--- a/raviteja14.html
+++ b/raviteja14.html
@@ -11,7 +11,7 @@
 <li>Address:metro station, mig 214, Rd Number 1, behind kphb Kukatpally, Housing Board Colony, Kukatpally, Hyderabad Telangana 500072</li>
 </ul>
 
-<button><a href="file:///C:/Users/DELL/Documents/raviteja11.html">back</a></button>
+<button><a href="./raviteja11.html">back</a></button>
 
 
 
